<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.demo.views.login.activity.LoginActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="com.demo.views.login.veiwmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGetOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/get_otp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGetOtp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edCountryCode"
            style="@style/MyEditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="3"
            android:inputType="number"
            android:focusable="false"
            android:maxLength="3"
            android:maxLines="1"
            android:textSize="18sp"
            android:text="@={loginViewModel.countryCode}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edPhoneNumber"
            style="@style/MyEditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:text="@={loginViewModel.phoneNumber}"
            app:layout_constraintStart_toEndOf="@+id/edCountryCode"
            app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/style_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:onClick="@{loginViewModel::getOtp}"
            android:text="@string/continues"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edPhoneNumber" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>