<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="notesFragmentViewModel"
            type="com.demo.views.home.viewmodel.NotesFragmentViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        android:layout_marginTop="30dp"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/notes"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/personal_message_to_you"
                android:textColor="@color/black"
                android:textSize="18sp" />




                <androidx.cardview.widget.CardView
                    android:id="@+id/cdView"
                    android:layout_width="match_parent"
                    app:cardCornerRadius="20dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:clipToPadding="true"
                    app:cardBackgroundColor="@color/white">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivNotes"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/smaple" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="bottom"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_above="@+id/tvNotesList"
                                android:text="@{notesFragmentViewModel.getName}"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvNotesList"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tap_to_review_50_notes"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInterested"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Interested In You"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPremium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premium_members_can_view_all_their_likes_at_onc"
                    android:textColor="@color/text_grey"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvInterested" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/style_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/upgrade"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLikes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>


    </ScrollView>


</layout>